# azkaban-cluster-dockerized

./: .env  .gitignore  Makefile  README  README.md  docker-compose.yml  requirements.txt
code/: README.md  pyproject.toml  setup.cfg
code/dummy/: entrypoint.py
code/src/inference/: infer.py
code/src/preprocessing/: preprocessor.py
code/src/training/: train.py
code/src/utils/: general.py  logger.py  s3_utils.py
database/scripts/: privileges.sql
executor/: Dockerfile
executor/conf/: azkaban.properties
orchestration/flows/: dev.env  infer.sh  preprocess.sh  run_inference.job  run_preprocess.job  run_train.job  train.sh
orchestration/flows/configs/: dev.yaml
scripts/: create_dataset_in_s3.py  test.sh
services/: docker-compose.yml
services/database/: Dockerfile
services/executor/conf/: commonprivate.properties
services/web-server/: Dockerfile
volumes/minio/.minio.sys/: format.json
volumes/notebooks/: testing_minio.ipynb
web-server/conf/: azkaban.properties
