[metadata]
name = mlcode
version = 0.0.1
author = ajkdrag
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    boto3
    scikit-learn
	pandas
	pyyaml
	click
	joblib

[options.entry_points]
console_scripts =
    spam_preprocessor = preprocessing.preprocessor:run
    spam_train = training.train:run
    spam_infer = inference.infer:run
